// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reset function should work correctly with view and visualizations 1`] = `undefined`;

exports[`reset function should work correctly with view and visualizations 2`] = `
<div
  className="projects-facets-reset"
>
  <Link
    className="button button-red"
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/projects",
        "query": Object {
          "view": "visualizations",
          "visualization": "bugs",
        },
      }
    }
  >
    clear_all_filters
  </Link>
</div>
`;

exports[`should render \`leak\` view correctly 1`] = `
<div>
  <Connect(FavoriteFilter)
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <div
    className="projects-facets-header clearfix"
  >
    <h3>
      filters
    </h3>
    <withRouter(SearchFilterContainer)
      isFavorite={false}
      query={
        Object {
          "view": "leak",
        }
      }
    />
  </div>
  <QualityGateFilter
    isFavorite={false}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <Connect(withRouter(LanguagesFilter))
    isFavorite={false}
    query={
      Object {
        "view": "leak",
      }
    }
  />
  <Connect(withRouter(TagsFilter))
    isFavorite={false}
    query={
      Object {
        "view": "leak",
      }
    }
  />
</div>
`;

exports[`should render correctly 1`] = `
<div>
  <Connect(FavoriteFilter) />
  <div
    className="projects-facets-header clearfix"
  >
    <div
      className="projects-facets-reset"
    >
      <Link
        className="button button-red"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/projects/favorite",
            "query": undefined,
          }
        }
      >
        clear_all_filters
      </Link>
    </div>
    <h3>
      filters
    </h3>
    <withRouter(SearchFilterContainer)
      isFavorite={true}
      query={
        Object {
          "size": "3",
        }
      }
    />
  </div>
  <QualityGateFilter
    isFavorite={true}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <PageSidebarOverall
    isFavorite={true}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <Connect(withRouter(LanguagesFilter))
    isFavorite={true}
    query={
      Object {
        "size": "3",
      }
    }
  />
  <Connect(withRouter(TagsFilter))
    isFavorite={true}
    query={
      Object {
        "size": "3",
      }
    }
  />
</div>
`;
